[gd_scene load_steps=39 format=3 uid="uid://44m1uuvplkvu"]

[ext_resource type="Script" path="res://scripts/LocalMap.gd" id="1_u3bsn"]
[ext_resource type="Theme" uid="uid://ds5x2cgvx5ioq" path="res://ui/TravelLogTheme.tres" id="2_nsfpq"]
[ext_resource type="Script" path="res://scripts/localmapscripts/LightOverlay.gd" id="2_uxs0r"]
[ext_resource type="Shader" path="res://shaders/shader1.gdshader" id="3_p6j8g"]
[ext_resource type="Texture2D" uid="uid://ct2ivaekujxpb" path="res://assets/localmap-graphics/ui-buttons/gearw.png" id="3_whjrw"]
[ext_resource type="Texture2D" uid="uid://3btal5umemi" path="res://assets/localmap-graphics/ui-buttons/geary.png" id="4_fhjbo"]
[ext_resource type="PackedScene" uid="uid://bp1jigvct3sol" path="res://ui/scenes/HotBarPanel.tscn" id="4_r5wdy"]
[ext_resource type="Texture2D" uid="uid://bo24ucgc4yuhg" path="res://assets/localmap-graphics/ui-buttons/playw.png" id="5_6vs8n"]
[ext_resource type="Texture2D" uid="uid://djxkvk6jr7al8" path="res://assets/localmap-graphics/ui-buttons/questw.png" id="6_g06gl"]
[ext_resource type="Texture2D" uid="uid://b1hot7p4jchyn" path="res://assets/localmap-graphics/ui-buttons/bookw.png" id="7_8srhi"]
[ext_resource type="Texture2D" uid="uid://cesuagmes177c" path="res://assets/localmap-graphics/ui-buttons/faithw.png" id="8_tc48r"]
[ext_resource type="Texture2D" uid="uid://mnxwvgpy2cxu" path="res://assets/localmap-graphics/ui-buttons/equipw.png" id="8_u1ilb"]
[ext_resource type="Texture2D" uid="uid://bqpjq53rfbdec" path="res://assets/localmap-graphics/ui-buttons/invw.png" id="9_diclb"]
[ext_resource type="Texture2D" uid="uid://b0k4xi6oxl3if" path="res://assets/localmap-graphics/ui-buttons/housew.png" id="10_pc3jf"]
[ext_resource type="Texture2D" uid="uid://ds0xi2mbdl1sq" path="res://assets/localmap-graphics/ui-buttons/hammerw.png" id="11_x44cc"]
[ext_resource type="Texture2D" uid="uid://buf70tls03bqb" path="res://assets/localmap-graphics/ui-buttons/le.png" id="12_mhbxv"]
[ext_resource type="Texture2D" uid="uid://cwtdm74ewxxsb" path="res://assets/worldmap-graphics/meters/44x44-health.png" id="13_8al1n"]
[ext_resource type="Script" path="res://scenes/play/LocalMap_InvButton.gd" id="13_tl2ti"]
[ext_resource type="Texture2D" uid="uid://co8q53tqpttqs" path="res://assets/localmap-graphics/ui-buttons/rest.png" id="14_287vf"]
[ext_resource type="Texture2D" uid="uid://c7h1sacfc3vp6" path="res://assets/worldmap-graphics/meters/44x44-stam.png" id="14_wkf05"]
[ext_resource type="Texture2D" uid="uid://ij5hia347stp" path="res://assets/localmap-graphics/ui-buttons/pray.png" id="15_3ibga"]
[ext_resource type="Texture2D" uid="uid://b2ud5d2dgta3d" path="res://assets/worldmap-graphics/meters/44x44-hunger.png" id="15_8hcox"]
[ext_resource type="Texture2D" uid="uid://bqkmpsu8jh8yv" path="res://assets/worldmap-graphics/meters/44x44-faitgue.png" id="16_ne38p"]
[ext_resource type="Texture2D" uid="uid://c5bcw6g5hdkq3" path="res://assets/worldmap-graphics/meters/44x44--sanity.png" id="17_a044d"]
[ext_resource type="FontFile" uid="uid://dbcudhplm1jri" path="res://ui/FreeMonoBold.ttf" id="17_eqlyi"]
[ext_resource type="Texture2D" uid="uid://c6yisb4revwe2" path="res://assets/localmap-graphics/ui-buttons/100x100-ammo-type.png" id="21_vpla5"]
[ext_resource type="Script" path="res://ui/scripts/LocalTravelLogControl.gd" id="30_gi8sa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wq2a5"]
shader = ExtResource("3_p6j8g")
shader_parameter/light_texture_size = Vector2(88, 88)
shader_parameter/max_alpha = 0.85

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxgxr"]
bg_color = Color(0, 0, 0, 1)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gy5xd"]
bg_color = Color(0, 0, 0, 1)
border_width_top = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1sgt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fbuco"]
bg_color = Color(0.921885, 0, 0.156112, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwg4i"]
bg_color = Color(0, 0.352941, 0.803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_87ba1"]
bg_color = Color(0.301961, 0.831373, 0.352941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6mmy"]
bg_color = Color(0.741176, 0.792157, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sf58m"]
bg_color = Color(0.973068, 0.000610105, 0.943586, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rh3e2"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4im3o"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_color = Color(1, 1, 1, 1)

[node name="LocalMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u3bsn")

[node name="LightOverlay" type="Node2D" parent="."]
script = ExtResource("2_uxs0r")

[node name="LightMask" type="Sprite2D" parent="LightOverlay"]
z_index = 99
texture_filter = 1
texture_repeat = 1
material = SubResource("ShaderMaterial_wq2a5")

[node name="TileContainer" type="Node2D" parent="."]
z_index = 2

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HotBarPanel" parent="UILayer" instance=ExtResource("4_r5wdy")]
z_index = 10
offset_left = 9.0
offset_right = -548.0

[node name="DebugUI" type="VBoxContainer" parent="UILayer"]
visible = false
top_level = true
z_index = 5
offset_left = 1615.0
offset_top = 146.0
offset_right = 1863.0
offset_bottom = 517.0
theme = ExtResource("2_nsfpq")

[node name="WorldMap" type="Button" parent="UILayer/DebugUI"]
z_index = 6
layout_mode = 2
text = "World Map"

[node name="WorldMap2" type="Button" parent="UILayer/DebugUI"]
z_index = 6
layout_mode = 2
text = "World Map"

[node name="ToggleFreePan" type="Button" parent="UILayer/DebugUI"]
layout_mode = 2
text = "Toggle Free Pan"

[node name="GenNewMapDebugButton" type="Button" parent="UILayer/DebugUI"]
layout_mode = 2
text = "Generate New Map"

[node name="BiomeButton" type="Button" parent="UILayer/DebugUI"]
layout_mode = 2
text = "Biome"

[node name="BiomeLabel" type="Label" parent="UILayer/DebugUI"]
layout_mode = 2
text = "Biome Name
"

[node name="TimeButton" type="Button" parent="UILayer/DebugUI"]
layout_mode = 2
text = "Time"

[node name="TimeLabel" type="Label" parent="UILayer/DebugUI"]
layout_mode = 2
text = "Current Time
"

[node name="WeatherButton" type="Button" parent="UILayer/DebugUI"]
layout_mode = 2
text = "Weather"

[node name="WeatherLabel" type="Label" parent="UILayer/DebugUI"]
layout_mode = 2
text = "Weather
"

[node name="ScenarioButton" type="Button" parent="UILayer/DebugUI"]
layout_mode = 2
text = "Scenario"

[node name="ScenarioLabel" type="Label" parent="UILayer/DebugUI"]
layout_mode = 2
text = "Scenario
"

[node name="LocalPlayUI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainMenuButton" type="TextureButton" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 10.0
offset_top = 13.0
offset_right = 44.0
offset_bottom = 47.0
texture_normal = ExtResource("3_whjrw")
texture_hover = ExtResource("4_fhjbo")
ignore_texture_size = true
stretch_mode = 0

[node name="CharButton" type="TextureButton" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 48.0
offset_top = 15.0
offset_right = 82.0
offset_bottom = 49.0
texture_normal = ExtResource("5_6vs8n")
texture_hover = ExtResource("4_fhjbo")
ignore_texture_size = true
stretch_mode = 0

[node name="JournalButton" type="TextureButton" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 86.0
offset_top = 12.0
offset_right = 120.0
offset_bottom = 46.0
texture_normal = ExtResource("6_g06gl")
texture_hover = ExtResource("4_fhjbo")
ignore_texture_size = true
stretch_mode = 0

[node name="SkillsButton" type="TextureButton" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 126.0
offset_top = 13.0
offset_right = 160.0
offset_bottom = 47.0
texture_normal = ExtResource("7_8srhi")
texture_hover = ExtResource("4_fhjbo")
ignore_texture_size = true
stretch_mode = 0

[node name="FaithButton" type="TextureButton" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 171.0
offset_top = 14.0
offset_right = 205.0
offset_bottom = 48.0
texture_normal = ExtResource("8_tc48r")
texture_hover = ExtResource("4_fhjbo")
ignore_texture_size = true
stretch_mode = 0

[node name="GearButton" type="TextureButton" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 212.0
offset_top = 14.0
offset_right = 246.0
offset_bottom = 48.0
texture_normal = ExtResource("8_u1ilb")
texture_hover = ExtResource("4_fhjbo")
ignore_texture_size = true
stretch_mode = 0

[node name="InvButton" type="TextureButton" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 252.0
offset_top = 13.0
offset_right = 286.0
offset_bottom = 47.0
texture_normal = ExtResource("9_diclb")
texture_hover = ExtResource("4_fhjbo")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("13_tl2ti")

[node name="CraftButton" type="TextureButton" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 297.0
offset_top = 12.0
offset_right = 331.0
offset_bottom = 46.0
texture_normal = ExtResource("11_x44cc")
texture_hover = ExtResource("4_fhjbo")
ignore_texture_size = true
stretch_mode = 0

[node name="BuildButton" type="TextureButton" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 337.0
offset_top = 11.0
offset_right = 371.0
offset_bottom = 45.0
texture_normal = ExtResource("10_pc3jf")
texture_hover = ExtResource("4_fhjbo")
ignore_texture_size = true
stretch_mode = 0

[node name="TopUI" type="Panel" parent="UILayer/LocalPlayUI"]
z_index = 2
layout_mode = 0
offset_right = 1923.0
offset_bottom = 60.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fxgxr")

[node name="BottomUI" type="Panel" parent="UILayer/LocalPlayUI"]
z_index = 2
layout_mode = 0
offset_left = -1.0
offset_top = 919.0
offset_right = 1514.0
offset_bottom = 1081.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gy5xd")

[node name="PlaySceneName" type="Label" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 404.0
offset_top = 20.0
offset_right = 1338.0
offset_bottom = 53.0
theme = ExtResource("2_nsfpq")
theme_override_font_sizes/font_size = 20
text = "Exploring Grasslands"
horizontal_alignment = 1

[node name="Realm" type="Label" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 1337.0
offset_top = 7.0
offset_right = 1656.0
offset_bottom = 38.0
theme = ExtResource("2_nsfpq")
theme_override_font_sizes/font_size = 19
text = "Stormwilling Region"
horizontal_alignment = 2

[node name="Time" type="Label" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 1485.0
offset_top = 15.0
offset_right = 1808.0
offset_bottom = 48.0
theme = ExtResource("2_nsfpq")
theme_override_font_sizes/font_size = 29
text = "11:00PM"
horizontal_alignment = 2

[node name="Date" type="Label" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 1343.0
offset_top = 29.0
offset_right = 1656.0
offset_bottom = 62.0
theme = ExtResource("2_nsfpq")
theme_override_font_sizes/font_size = 19
text = "September 1, 1822"
horizontal_alignment = 2

[node name="AmmoType" type="Label" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 1423.0
offset_top = 933.0
offset_right = 1516.0
offset_bottom = 970.0
theme = ExtResource("2_nsfpq")
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("17_eqlyi")
theme_override_font_sizes/font_size = 16
text = "9mm 
Standard"

[node name="AmmoClip" type="Label" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 1423.0
offset_top = 966.0
offset_right = 1535.0
offset_bottom = 993.0
theme = ExtResource("2_nsfpq")
theme_override_font_sizes/font_size = 18
text = "999/999"

[node name="TimeOfDayType" type="TextureRect" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 1825.0
offset_top = 11.0
offset_right = 1909.0
offset_bottom = 95.0
texture = ExtResource("12_mhbxv")

[node name="RestButton" type="TextureRect" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 1444.0
offset_top = 997.0
offset_right = 1506.0
offset_bottom = 1061.0
texture = ExtResource("14_287vf")
expand_mode = 1

[node name="PrayButton" type="TextureRect" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 1375.0
offset_top = 997.0
offset_right = 1435.0
offset_bottom = 1061.0
texture = ExtResource("15_3ibga")
expand_mode = 1

[node name="LocalMetersContainer" type="VBoxContainer" parent="UILayer/LocalPlayUI"]
layout_mode = 0
offset_left = 1535.0
offset_top = 860.0
offset_right = 1906.0
offset_bottom = 1076.0
theme_override_constants/separation = -1

[node name="HBoxLocalHealth" type="HBoxContainer" parent="UILayer/LocalPlayUI/LocalMetersContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="LocalHealth" type="TextureRect" parent="UILayer/LocalPlayUI/LocalMetersContainer/HBoxLocalHealth"]
z_index = 4
layout_mode = 2
texture = ExtResource("13_8al1n")

[node name="LocalHealthBar" type="ProgressBar" parent="UILayer/LocalPlayUI/LocalMetersContainer/HBoxLocalHealth"]
z_index = 2
custom_minimum_size = Vector2(322, 35)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_a1sgt")
theme_override_styles/fill = SubResource("StyleBoxFlat_fbuco")
value = 50.0

[node name="HBoxLocalStamina" type="HBoxContainer" parent="UILayer/LocalPlayUI/LocalMetersContainer"]
layout_mode = 2

[node name="LocalStamina" type="TextureRect" parent="UILayer/LocalPlayUI/LocalMetersContainer/HBoxLocalStamina"]
z_index = 4
layout_mode = 2
texture = ExtResource("14_wkf05")

[node name="LocalStaminaBar" type="ProgressBar" parent="UILayer/LocalPlayUI/LocalMetersContainer/HBoxLocalStamina"]
z_index = 2
custom_minimum_size = Vector2(322, 35)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_a1sgt")
theme_override_styles/fill = SubResource("StyleBoxFlat_qwg4i")
value = 50.0

[node name="HBoxLocalHunger" type="HBoxContainer" parent="UILayer/LocalPlayUI/LocalMetersContainer"]
layout_mode = 2

[node name="LocalHunger" type="TextureRect" parent="UILayer/LocalPlayUI/LocalMetersContainer/HBoxLocalHunger"]
z_index = 4
layout_mode = 2
texture = ExtResource("15_8hcox")

[node name="LocalHungerBar" type="ProgressBar" parent="UILayer/LocalPlayUI/LocalMetersContainer/HBoxLocalHunger"]
z_index = 2
custom_minimum_size = Vector2(322, 35)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_a1sgt")
theme_override_styles/fill = SubResource("StyleBoxFlat_87ba1")
value = 50.0

[node name="HBoxLocalFatigue" type="HBoxContainer" parent="UILayer/LocalPlayUI/LocalMetersContainer"]
layout_mode = 2

[node name="LocalFatigue" type="TextureRect" parent="UILayer/LocalPlayUI/LocalMetersContainer/HBoxLocalFatigue"]
z_index = 4
layout_mode = 2
texture = ExtResource("16_ne38p")

[node name="LocalFatigueBar" type="ProgressBar" parent="UILayer/LocalPlayUI/LocalMetersContainer/HBoxLocalFatigue"]
z_index = 2
custom_minimum_size = Vector2(322, 35)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_a1sgt")
theme_override_styles/fill = SubResource("StyleBoxFlat_v6mmy")
value = 50.0

[node name="HBoxLocalSanity" type="HBoxContainer" parent="UILayer/LocalPlayUI/LocalMetersContainer"]
layout_mode = 2

[node name="LocalSanity" type="TextureRect" parent="UILayer/LocalPlayUI/LocalMetersContainer/HBoxLocalSanity"]
z_index = 4
layout_mode = 2
texture = ExtResource("17_a044d")

[node name="LocalSanityBar" type="ProgressBar" parent="UILayer/LocalPlayUI/LocalMetersContainer/HBoxLocalSanity"]
z_index = 2
custom_minimum_size = Vector2(322, 35)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_a1sgt")
theme_override_styles/fill = SubResource("StyleBoxFlat_sf58m")
value = 50.0

[node name="AmmoImage" type="TextureRect" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 1364.0
offset_top = 933.0
offset_right = 1420.0
offset_bottom = 987.0
texture = ExtResource("21_vpla5")
expand_mode = 1

[node name="TravelLog" type="Label" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 0
offset_left = 16.0
offset_top = 687.0
offset_right = 186.0
offset_bottom = 747.0
theme = ExtResource("2_nsfpq")
theme_override_font_sizes/font_size = 29
text = "Travel Log"
horizontal_alignment = 2

[node name="TravelLogControl" type="Control" parent="UILayer/LocalPlayUI"]
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_left = 15.0
offset_top = 707.0
offset_right = 294.0
offset_bottom = 888.0
script = ExtResource("30_gi8sa")

[node name="TravelLogPanel" type="Panel" parent="UILayer/LocalPlayUI/TravelLogControl"]
layout_mode = 0
offset_top = 18.0
offset_right = 279.0
offset_bottom = 199.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rh3e2")

[node name="TravelLogScrollContainer" type="ScrollContainer" parent="UILayer/LocalPlayUI/TravelLogControl/TravelLogPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 272.0
offset_bottom = 172.0
horizontal_scroll_mode = 0

[node name="TravelLogRichTextLabel" type="RichTextLabel" parent="UILayer/LocalPlayUI/TravelLogControl/TravelLogPanel/TravelLogScrollContainer"]
custom_minimum_size = Vector2(256, 86)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
fit_content = true
scroll_following = true
autowrap_mode = 2

[node name="Panel" type="Panel" parent="UILayer"]
custom_minimum_size = Vector2(160, 150)
offset_left = 1512.0
offset_top = 843.0
offset_right = 1929.0
offset_bottom = 1089.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_4im3o")

[node name="DarkOverlay" type="ColorRect" parent="UILayer"]
offset_left = -19.0
offset_top = -27.0
offset_right = 1938.0
offset_bottom = 1101.0
mouse_filter = 2
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="NodeTransferWindow" type="Control" parent="UILayer"]
process_mode = 3
top_level = true
z_index = 10
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 921.0
